--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -28,6 +28,10 @@
   flex-grow: 1;
 }
 
+.title_area {
+  text-align: center;
+}
+
 .title a {
   color: #0070f3;
   text-decoration: none;
@@ -39,10 +43,23 @@
   text-decoration: underline;
 }
 
+.title_header {
+  margin: 0;
+  line-height: 1.15;
+  font-size: 8vw;
+}
+
 .title {
   margin: 0;
   line-height: 1.15;
-  font-size: 4rem;
+  font-size: 12vw;
+}
+
+.title_footer {
+  margin: 0;
+  line-height: 1.15;
+  font-size: 8vw;
+  margin-bottom: 20px;
 }
 
 .title,
@@ -53,7 +70,7 @@
 .description {
   margin: 4rem 0;
   line-height: 1.5;
-  font-size: 1.5rem;
+  font-size: 1.2em;
 }
 
 .code {
@@ -108,22 +125,11 @@
   margin-left: 0.5rem;
 }
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .card,
-  .footer {
-    border-color: #222;
-  }
-  .code {
-    background: #111;
-  }
-  .logo img {
-    filter: invert(1);
-  }
+#comingsoon {
+  background-color: #666;
+  width: 90vw;
+  text-align: center;
+  padding: 50px;
+  font-size: 1.25rem;
+  margin: 50px 0;
 }
