--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,6 +20,18 @@ html {
 }
 
 body {
-  color: white;
-  background: black;
+  color: #333333;
+  background: url('/marine.png') no-repeat #6bd6fa;
+  background-size: contain;
+}
+
+.border {
+  margin: 30px 0;
+  height: 3px;
+  background-color: rgb(19, 162, 251);
+  box-shadow: 1px 1px 1px #0aa4e1;
+}
+
+.rule-card {
+  margin-bottom: 20px;
 }
